--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="js/app.js" defer></script>
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body>
         <div class="dream-orb orb-1"></div>
@@ -191,4 +195,5 @@
         <p>Hecho con amor, esfuerzo y HTML Y CSS.</p>
     </footer>
 </body>
+
 </html>
