--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script>
       window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
     </script>
-    <script defer src="/_vercel/insights/script.js"></script>
+    <script defer src="https://va.vercel-scripts.com/v1/script.js"></script>
 </head>
 <body>
         <div class="dream-orb orb-1"></div>
@@ -197,3 +197,4 @@
 </body>
 
 </html>
+
