Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 </a>
 
                 <p class="nota-final">Si das clic, entenderé que podremos hablar frente a frente. Si no, espero que hayas visto todo esto y que fuese de tu agrado. Te amo y siempre te amaré, y pase lo que pase estoy seguro que siempre fuiste tú, y estare aqui esperandote.</p>
-
+                <p class="nota-final">Y quizas ya viste la pagina al menos una vez, espero puedas verla una segunda, solo para decir que el sitio tiene un limite de vida hasta el 31 de Diciembre, sea lo que sea que digas, espero pueder saberlo antes de esa fecha, aunque desearia saberlo en persona se que no es posible, de no ser asi prometo no insistir más allá de esa fecha limite, gracias por verla Camila, cuidense y les deseo lo mejor. </p>
             </div>
         </section>
     </main>
@@ -197,4 +197,5 @@
 </body>
 
 </html>
+
 
